# apm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ap.sh  apm.go  bridge.cpp  bridge.go  bridge.h  bridge_test.go  cp.sh  go.mod  main  main.cpp
examples/echo_cancellation/: main.go
examples/full_pipeline/: main.go
examples/noise_suppression/: main.go
google.com/abseil-cpp/absl/: absl.go
google.com/abseil-cpp/absl/base/: base.go
google.com/abseil-cpp/absl/container/: container.go
google.com/abseil-cpp/absl/crc/: crc.go
google.com/abseil-cpp/absl/debugging/: debugging.go
google.com/abseil-cpp/absl/flags/: flags.go
google.com/abseil-cpp/absl/functional/: functional.go
google.com/abseil-cpp/absl/hash/: hash.go
google.com/abseil-cpp/absl/numeric/: numeric.go
google.com/abseil-cpp/absl/profiling/: profiling.go
google.com/abseil-cpp/absl/time/: clock.h  (+6 more)
google.com/webrtc/: webrtc.go
google.com/webrtc/api/: api.go
google.com/webrtc/audio_coding/: audio_coding.go
google.com/webrtc/audio_processing/: apm.go  audio_buffer.cc  audio_processing_impl.cc  audio_processing_impl.h  echo_control_mobile_impl.cc  gain_control_impl.cc  gain_control_impl.h  gain_controller2.cc  gain_controller2.h  high_pass_filter.cc  high_pass_filter.h  residual_echo_detector.cc  residual_echo_detector.h  rms_level.cc  splitting_filter.cc  splitting_filter.h  three_band_filter_bank.cc
google.com/webrtc/common_audio/: common_audio.go
google.com/webrtc/experiments/: registered_field_trials.h
google.com/webrtc/rtc_base/: rtc_base.go  task_queue_gcd.cc  task_queue_win.cc
(+316 files in other folders)
